# ppt-to-text

./: .gitignore  Makefile  main.ipynb  main.py  poc.ipynb  pyproject.toml  shell.nix
